--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pino-mozlog": "./index.js"
   },
   "scripts": {
+    "build": "rimraf dist/ && babel -d dist/ index.js && babel -d dist/src/ src/ && cp -r LICENSE.txt README.md package.json dist/" ,
     "prettier": "prettier --write '**'",
     "test": "jest"
   },
@@ -22,9 +23,13 @@
     "through2": "^2.0.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "jest": "^23.4.2",
     "jest-json-schema": "^2.0.1",
-    "prettier": "^1.14.0"
+    "prettier": "^1.14.0",
+    "rimraf": "^2.6.2"
   },
   "jest": {
     "testURL": "http://localhost/"
