--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
       - *run_npm_install
       - *save_build_cache
       - run: npm test
+      - run: npm run build
       # Set up a workspace to share data between this job and the `release-tag`
       # one when we want to publish a new npm version.
       - persist_to_workspace:
@@ -78,11 +79,10 @@ jobs:
           at: ~/pino-mozlog
       - run:
           name: authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/pino-mozlog/.npmrc
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/pino-mozlog/dist/.npmrc
       - run:
           name: publish package
           command: |
-            npm run build
             cd dist/
             npm publish
 
