--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,8 @@ jobs:
           at: ~/pino-mozlog
       - run:
           name: authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/pino-mozlog/dist/.npmrc
+          # We don't want to expand the token in this file, npm will do it.
+          command: echo '//registry.npmjs.org/:_authToken=$NPM_TOKEN' > ~/pino-mozlog/dist/.npmrc
       - run:
           name: publish package
           command: |
