--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
       - run:
           name: authenticate with registry
           # We don't want to expand the token in this file, npm will do it.
-          command: echo '//registry.npmjs.org/:_authToken=$NPM_TOKEN' > ~/pino-mozlog/dist/.npmrc
+          command: echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > ~/pino-mozlog/dist/.npmrc
       - run:
           name: publish package
           command: |
