--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,28 @@
 {
   "extends": [
-    "config:base"
-  ]
+    "config:js-app",
+    ":maintainLockFilesWeekly",
+    ":prNotPending"
+  ],
+  "packageRules": [
+    {
+      "packagePatterns": [
+        "*"
+      ],
+      "rangeStrategy": "pin"
+    },
+    {
+      "depTypeList": [
+        "engines",
+        "devDependencies",
+        "peerDependencies"
+      ],
+      "rangeStrategy": "replace"
+    }
+  ],
+  "automerge": true,
+  "major": {
+    "automerge": false
+  },
+  "stabilityDays": 2
 }
