--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "node": "6"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "12"
+        }
       }
-    }]
+    ]
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": ["@babel/plugin-transform-spread"]
 }
